front-back put/delete routes

--- a/frontend/portfolio-sofi/src/App.scss
+++ b/frontend/portfolio-sofi/src/App.scss
@@ -1,8 +1,5 @@
-.App {
-  text-align: center;
-}
-
 .project-showcase {
+  text-align: center;
   display: flex;
   flex-wrap: wrap;
   margin: 2rem;
@@ -21,4 +18,23 @@
     padding: 5px;
     margin: 10px auto;
   }
+}
+
+.contact-form {
+  display: flex;
+  flex-direction: column;
+  width: 32rem;
+  padding: 10px;
+  margin: 20px auto;
+  justify-content: space-evenly;
+  input {
+    padding: 5px;
+    margin: 5px 0;
+  }
+}
+
+.projects-edit-mode {
+  // border: 1px solid blue;
+  margin-top: 20px;
+  padding: 10px 0;
 }
